<resources>
    <string name="app_name">bitrubio</string>
    <string name="navigation_drawer_open">Open navigation </string>
    <string name="navigation_drawer_close">Close navigation </string>
    <string name="facebook_app_id">521714811337632</string>
    <string name="action_settings">Configuración</string>
    <string name="drawer_tarjeta">Tarjeta</string>
    <string name="drawer_promociones">Promociones</string>
    <string name="drawer_ayuda">Ayuda</string>
    <string name="drawer_configuracion">Configuración</string>
    <string name="drawer_acercaDe">Acerca De</string>
    <string name="action_beets">beets</string>
    <string name="action_helpBeety">Ayuda Beety</string>
    <string name="drawer_premium">Premium</string>
    <string name="drawer_facturas">Facturas</string>
    <string name="drawer_cerrar_session">Cerrar sessión</string>
    <string name="drawer_agenda">Agenda</string>
    <string name="spinner_tipoSanguineo">Tipo sanguineo</string>
    <string name="datosPersonales">Datos personales</string>
    <string name="perfilNombre">Nombre(s)</string>
    <string name="perfilApePat">Primer apellido</string>
    <string name="perfilApeMat">Segundo apellido</string>
    <string name="Hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="FechaNac">Fecha de nacimiento</string>
    <string name="Celular">Celular (10 dígitos)</string>
    <string name="Email">Correo electrónico</string>
    <string name="password">Contraseña (mínimo 6 caracteres)</string>
    <string name="confirmpass">Confirmar contraseña</string>
    <string name="deseoAfiliarme">Deseo afiliarme para donar</string>
    <string name="sangre">Sangre</string>
    <string name="organos">Órganos</string>
    <string name="codigo">Código de invitado</string>
    <string name="no">No</string>
    <string name="Datosfisicos">Datos físicos</string>
    <string name="tipoSanguineo">Tipo sanguíneo</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="prefereciaSex">Preferencia sexual</string>
    <string name="hetero">Heterosexual</string>
    <string name="homo">Homosexual</string>
    <string name="bisex">Bisexual</string>
    <string name="vacunas">Vacunas</string>
    <string name="anteFam">Antecedentes familiares</string>
    <string name="diabetes">Diabetes</string>
    <string name="hipertension">Hipertensíon</string>
    <string name="cancer">Cancer</string>
    <string name="otro">Otro</string>
    <string name="padPrev">Padecimientos previos</string>
    <string name="lesionPrev">Lesiones previas</string>
    <string name="cirPrev">Cirugías previas</string>
    <string name="padAct">Padeciminetos actuales</string>
    <string name="alergias">Alergias</string>
    <string name="susAct">Sustancias activas</string>
    <string name="ambi">Ambiente</string>
    <string name="pregEmbarazada">¿Estas embarazada?</string>
    <string name="pregSemanasEmb">¿Cuantas semanas tienes?</string>
    <string name="pregEjercicio">¿Haces ejercicio?</string>
    <string name="pregFumas">¿Fumas tabaco?</string>
    <string name="pregAlcohol">¿Consumes bebidas alcohólicas?</string>
    <string name="pregDrogas">¿Consumes algún tipo de droga?</string>
    <string name="seguros">Seguros</string>
    <string name="segMed">Seguro médico</string>
    <string name="numImss">Número del IMSS</string>
    <string name="numIsste">Número del ISSSTE</string>
    <string name="numSegPop">Número de SEGURO POPULAR</string>
    <string name="otroSeg">Otro seguro</string>
    <string name="segVida">Seguro de vida</string>
    <string name="compañia">Compañía</string>
    <string name="poliza">Póliza</string>
    <string name="vigencia">Vigencia</string>
    <string name="agreOtroSeg">Agregar otro seguro</string>
    <string name="seguroVida">Seguro de vida</string>
    <string name="perfilGnrl">Perfil general</string>
    <string name="hisorialCli">Historial clínico</string>
    <string name="servicio">Servicio</string>
    <string name="iniciaRegistro">Regístrate</string>
    <string name="iniciaSesion">Inicia sesión</string>
    <string name="aceptoterminos">Acepto términos y política de privacidad</string>
    <string name="metasFisicas">Salud</string>
    <string name="metasBienestar">Bienestar</string>
    <string name="metasEmocionales">Emocionales</string>
    <string name="metasSocial">Social</string>
    <string name="metasEnfermedad">Enfermedad</string>
    <string name="elige_metas">Elige la meta que te gustaría iniciar</string>
    <string name="peso_actual">Peso actual</string>
    <string name="peso_objetivo">Peso objetivo</string>
    <string name="tiempo_meta">Tiempo para lograrlo</string>
    <string name="reta_amigos">Retar a tus amigos</string>
    <string name="armar_equipo">Arma tu equipo de apoyo</string>
    <string name="estatus_privacidad">Privacidad</string>
    <string name="tittle_servicio">Prioriza el tipo de servicio que quieres recibir</string>
    <string name="CompartirCon">Compartir con</string>
    <string name="publicarCon">Publicar en bitrubio</string>
    <string name="cirugiasPrev">Cirugías previas</string>
    <string name="numSedPemex">Número de Pemex</string>
    <string name="nombra_tu_meta">Nombra tu meta</string>
    <string name="ayudar_objetivo">Objetivo</string>
    <string name="ayudar_tiempo">¿Por cuánto tiempo?</string>
    <string name="personas_misCausa">Personas con tu misma causa</string>
    <string name="incluir_persona">¿A quién te gustaría incluir en tu meta?</string>
    <string name="sumateGrupo">Súmate a un grupo con tu misma causa</string>
    <string name="medicamento">Medicamento</string>
    <string name="disis">Dosis</string>
    <string name="cuanto_tiempo">¿Cada cuánto tiempo?</string>
    <string name="porTiempo">¿Por cuánto tiempo?</string>
    <string name="incluyeMedico">Incluye a tu médico</string>
    <string name="mensaje_agradecimiento">Manda un mensaje de agradecimiento</string>
    <string name="pregRefresco">¿Bebes refresco?</string>
    <string name="Personal">Alias</string>
    <string name="profileExperto">Experto</string>
    <string name="proximaCita">Próxima cita disponible</string>
    <string name="estudios">Estudios</string>
    <string name="promociones">Promociones</string>
    <string name="actualizaciones">Actualizaciones</string>
    <string name="instalaciones">Instalaciones</string>
    <string name="subtotal">Subtotal</string>
    <string name="iva">IVA</string>
    <string name="total_pagar">Total a pagar</string>
    <string name="pagar">Pagar</string>
    <string name="cantidad">Cantidad</string>
    <string name="codigoPromocion">Código de promoción</string>
    <string name="AgregarCodigo">Agregar código de promoción</string>
    <string name="misTarjetas">Mis tarjetas</string>
    <string name="agrgarTarjeta">Agregar nueva tarjeta</string>
    <string name="pagarPaypal">Pagar con PayPal</string>
    <string name="aceptar">Aceptar</string>
    <string name="seguirComprando">Seguir comprando</string>
    <string name="SeleccionaGaleria">Selecciona de  tu galería</string>
    <string name="CapturaFoto">Captura una foto nueva</string>
    <string name="servicios">Servicios</string>
    <string name="intro">Red de salud y bienestar</string>
    <string name="terminos">Términos y política de privacidad</string>
    <string name="correo">Correo electrónico</string>
    <string name="bitrubio">bitrubio</string>
    <string name="comentaPrincipal">Dilo, no te detengas</string>
    <string name="fisicamente">Físicamente</string>
    <string name="emocional">Emocionalmente</string>
    <string name="cotizar">Cotizar</string>
    <string name="misRecetas">Mis recetas</string>
    <string name="reg_pregunta1">¿Qué quieres hacerte?</string>
    <string name="reg_pregunta2">Presupuesto inicial</string>
    <string name="reg_pregunta3">¿Quienes quieres que participen?</string>
    <string name="reg_pregunta4">Fecha límite para propuesta</string>
    <string name="reg_pregunta5">Comentarios adicionales</string>
    <string name="cirugia_a">Cirugía funcional</string>
    <string name="cirugia_b">Cirugia estética</string>
    <string name="cirugia_c">Consulta padecimiento crónico</string>
    <string name="cirugia_d">Tratamiento vitalicio</string>
    <string name="cirugia_e">Procedimiento dental o capilar</string>
    <string name="experto">Expertos</string>
    <string name="coaches">Coaches</string>
    <string name="corporativos">Corporativos</string>
    <string name="comentaSubasta">Escribe tus Comentarios</string>
    <string name="vence">Vence en</string>
    <string name="fechaPuja">Fecha de puja</string>
    <string name="puja">Puja</string>
    <string name="comentarioMedico">Comentario del médico</string>
    <string name="negociar">Dispuesto a negociar</string>
    <string name="modoPago">Modo de pago</string>
    <string name="aseguradoras">Aseguradoras</string>
    <string name="incluye">Incluye</string>
    <string name="tecnologia">Tecnología utilizada</string>
    <string name="referencias">Referencias</string>
    <string name="fundacion">Fundación bitrubio</string>
    <string name="text_fundacion">En fundación bitrubio estamos comprometidos con el altruismo, queremos hace un cambio por la humanida y es por eso que te facilitamos la comunicación con diferentes organizaciones sin fines de lucro</string>
    <string name="quiero_donar">Quiero donar</string>
    <string name="me_donen">Quiero que me donen</string>
    <string name="preguntaDonar">¿Qué te gustaría donar?</string>
    <string name="dinero">Dinero</string>
    <string name="voluntariado">Voluntariado</string>
    <string name="otros">Otros</string>
    <string name="tuPlan">Tu plan actual</string>
    <string name="cambiatePremium">Cámbiate a Premium y podrás</string>
    <string name="opcionPremium1">-Hablar con médico las 24 hrs. los 365 días</string>
    <string name="opcionPremium2">-Compartir fotos y documentos con tus médicos</string>
    <string name="opcionPremium3">-Guardar todas tus facturas</string>
    <string name="costoPremium">$ 99 </string>
    <string name="monedaNacional">MXN</string>
    <string name="mensual">mensuales</string>
    <string name="contratar">Contratar</string>
    <string name="basico">Básico</string>
    <string name="protegerPersona">¿Te gustaría proteger a otra persona?</string>
    <string name="opcionPremium4">Protege a tus familiares con los mismos beneficios que tu paquete Premium</string>
    <string name="costoPorteger">$ 50</string>
    <string name="mensualpersona">mensual por persona</string>
    <string name="agregarPersona">Agregar persona</string>
    <string name="noAgregar">No agregar</string>
    <string name="premium">Premium</string>
    <string name="personaExtra">Persona extra</string>
    <string name="parentesco">Parentesco</string>
    <string name="especifica">Especifica</string>
    <string name="ayudarme">¿Porqué ayudarme?</string>
    <string name="buscar">Buscar</string>
    <string name="comentarioAdd">Comentario Adicional</string>
    <string name="pasosAseguir">Pasos a seguir</string>
    <string name="ubicacion">Ubicación</string>
    <string name="hepatits">Hepatitis B</string>
    <string name="poliomelitis">Poliomelitis Sabin</string>
    <string name="rotavirus">Rotavirus</string>
    <string name="triple">Triple viral SRP y SR</string>
    <string name="neumococo">Neumococo</string>
    <string name="pentavalente">Pentavalente</string>
    <string name="bcg">BCG</string>
    <string name="dtp">DTP</string>
    <string name="td">Td</string>
    <string name="influenza">Influenza</string>
    <string name="tdpa">Tdpa</string>
    <string name="vph">VPH</string>
    <string name="ingresaContraseña">Ingresa tu contraseña</string>
    <string name="Cvv">Código de seguridad</string>
</resources>